# grumpy

./: .gitignore  README.md  pkg-{name}-README.md  requirements.txt  workspace_2.tsv  workspace_3.tsv  workspace_exploration.csv
arm/: setup.cfg  setup.py
arm/arm_manipulation/: servo_maniplator.py
arm_manipulation/: API.md  package.xml  setup.py
arm_manipulation/arm_manipulation/: servo_maniplator.py
arm_srvs/: API.md  CMakeLists.txt  package.xml  setup.cfg  setup.py
arm_srvs/arm_srvs/: _arm_camera_service.py  arm_camera_service.py  camera_service.py  drop_service.py  pick_service.py  positioning_service.py  utils.py
brain/: package.xml  setup.py
brain/brain/: align_topic.py  brain_collection.py  brain_exploration.py  pick_drop_topic_node.py
dectection_arm_cam/: API.md  package.xml  setup.cfg  setup.py
dectection_arm_cam/detection_arm_cam/: detection_arm_cam.py
detection/: package.xml  setup.py
detection/detection/: detection.py
display_markers/: package.xml  setup.cfg  setup.py
display_markers/display_markers/: display_markers.py
drive_control/: package.xml  setup.py
drive_control/drive_control/: drive_2.py  drive_control.py  drive_path.py  local_obstacle_avoidance.py
grumpy_interfaces/: CMakeLists.txt  package.xml
grumpy_interfaces/msg/: ObjectDetection1D.msg  (+1 more)
icp_node/: package.xml  setup.cfg  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
keyboard_control/: API.md  package.xml  setup.py
launch_project/: package.xml  setup.cfg  setup.py
learning_tf2_py/: package.xml  setup.py
lidar/: package.xml  setup.py
localization/: package.xml  setup.py
log/: latest_build
object_mapping/: package.xml  setup.cfg  setup.py
occupancy_grid_map/: package.xml  setup.cfg  setup.py
odometry/: package.xml  setup.py
perception_pkg/: .gitignore  package.xml  perception_pkg-README.md  perception_pkg.md  setup.py
planner/: package.xml  setup.py
project/collection_launch/: README.md  package.xml  setup.cfg  setup.py
project/collection_launch/launch/: nodes_launch.py  robot_launch.py  services_launch.py
project/localization_launch/: LICENSE  README.md  package.xml  setup.py
project/localization_launch/launch/: localization_launch.py
(+48 files in other folders)
